<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_2"
    tools:context=".ActivityContact">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="642dp"
        android:text="@string/contact_us"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/address"
        android:layout_width="289dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="450dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="13dp"
        android:text="@string/phone"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="17dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/map"
        android:layout_width="83dp"
        android:layout_height="57dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="364dp"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="278dp"
        android:layout_height="71dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/donate_bg_stroke"
        android:onClick="handleAnimation"
        android:text="@string/donate"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <ImageView
        android:id="@+id/dollarSign"
        android:layout_width="104dp"
        android:layout_height="108dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@drawable/dollar"
        android:background="#0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/animalsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

</androidx.constraintlayout.widget.ConstraintLayout>